EMS: Fixed ControlServiceCoordinator to prevent NPE